build_log_v61.txt

> flashplex@0.1.61 android:shield
> npm run tauri android build -- --target aarch64


> flashplex@0.1.61 tauri
> tauri android build --target aarch64

        Info Using installed NDK: /Volumes/WD/Users/yommi/Library/Android/sdk/ndk/28.2.13676358
        Info Looking up installed tauri packages to check mismatched versions...
[1m[92m   Compiling[0m flashplex v0.1.61 (/Volumes/WD/Users/yommi/Work/tauri_projects/gds_mobile_player/src-tauri)
[1m[91merror[E0433][0m[1m: failed to resolve: could not find `platform` in `tauri`[0m
 [1m[94m--> [0msrc/lib.rs:8:12
  [1m[94m|[0m
[1m[94m8[0m [1m[94m|[0m [1m[94m...[0mtauri::platform::android::Ap[1m[94m...[0m
  [1m[94m|[0m           [1m[91m^^^^^^^^[0m [1m[91mcould not find `platform` in `tauri`[0m

[1m[33mwarning[0m[1m: unused import: `tauri::Window`[0m
 [1m[94m--> [0msrc/lib.rs:4:5
  [1m[94m|[0m
[1m[94m4[0m [1m[94m|[0m use tauri::Window;
  [1m[94m|[0m     [1m[33m^^^^^^^^^^^^^[0m
  [1m[94m|[0m
  [1m[94m= [0m[1mnote[0m: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

[1m[91merror[E0599][0m[1m: no method named `android_app` found for struct `AppHandle<R>` in the current scope[0m
  [1m[94m--> [0msrc/lib.rs:70:23
   [1m[94m|[0m
[1m[94m70[0m [1m[94m|[0m [1m[94m...[0m= _app.android_app().vm();
   [1m[94m|[0m           [1m[91m^^^^^^^^^^^[0m [1m[91mmethod not found in `AppHandle`[0m

[1m[91merror[E0599][0m[1m: no method named `android_app` found for struct `AppHandle<R>` in the current scope[0m
  [1m[94m--> [0msrc/lib.rs:72:29
   [1m[94m|[0m
[1m[94m72[0m [1m[94m|[0m [1m[94m...[0m= _app.android_app().activi[1m[94m...[0m
   [1m[94m|[0m           [1m[91m^^^^^^^^^^^[0m [1m[91mmethod not found in `AppHandle`[0m

[1m[91merror[E0599][0m[1m: no method named `android_app` found for struct `AppHandle<R>` in the current scope[0m
   [1m[94m--> [0msrc/lib.rs:109:23
    [1m[94m|[0m
[1m[94m109[0m [1m[94m|[0m [1m[94m...[0m_app.android_app().vm();
    [1m[94m|[0m         [1m[91m^^^^^^^^^^^[0m [1m[91mmethod not found in `AppHandle`[0m

[1m[91merror[E0599][0m[1m: no method named `android_app` found for struct `AppHandle<R>` in the current scope[0m
   [1m[94m--> [0msrc/lib.rs:111:29
    [1m[94m|[0m
[1m[94m111[0m [1m[94m|[0m [1m[94m...[0m_app.android_app().activit[1m[94m...[0m
    [1m[94m|[0m         [1m[91m^^^^^^^^^^^[0m [1m[91mmethod not found in `AppHandle`[0m

[1m[33mwarning[0m[1m: unused import: `tauri::Manager`[0m
 [1m[94m--> [0msrc/lib.rs:3:5
  [1m[94m|[0m
[1m[94m3[0m [1m[94m|[0m use tauri::Manager;
  [1m[94m|[0m     [1m[33m^^^^^^^^^^^^^^[0m

[1mSome errors have detailed explanations: E0433, E0599.[0m
[1mFor more information about an error, try `rustc --explain E0433`.[0m
[1m[33mwarning[0m: `flashplex` (lib) generated 2 warnings
[1m[91merror[0m: could not compile `flashplex` (lib) due to 5 previous errors; 2 warnings emitted
failed to build Android app: `Failed to run `cargo build`: command ["cargo", "build", "--package", "flashplex", "--manifest-path", "/Volumes/WD/Users/yommi/Work/tauri_projects/gds_mobile_player/src-tauri/Cargo.toml", "--target", "aarch64-linux-android", "--features", "tauri/custom-protocol", "--lib", "--release"] exited with code 101
       Error failed to build Android app: `Failed to run `cargo build`: command ["cargo", "build", "--package", "flashplex", "--manifest-path", "/Volumes/WD/Users/yommi/Work/tauri_projects/gds_mobile_player/src-tauri/Cargo.toml", "--target", "aarch64-linux-android", "--features", "tauri/custom-protocol", "--lib", "--release"] exited with code 101
